<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff3aa8f2" >

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400.0dip"
        android:text="@string/login_title"
        android:textColor="#ffffffff"
        android:textSize="100.0sp" />

    <RelativeLayout
        android:id="@+id/login_sub_relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/login_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100.0dip"
            android:text="@string/login_username"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#ffffffff" />

        <EditText
            android:id="@+id/login_username_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/login_username"
            android:inputType="text"
            android:hint="@string/login_username_hint"
            android:minWidth="340.0dip"
            android:nextFocusForward="@+id/login_password_input"
            android:textColor="#ff3aa8f2" />

        <TextView
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/login_username_input"
            android:layout_marginTop="20.0dip"
            android:text="@string/login_password"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#ffffffff" />

        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/login_password"
            android:inputType="textPassword"
            android:minWidth="340.0dip"
            android:textColor="#ff3aa8f2" />
    </RelativeLayout>

    <CheckBox
        android:id="@+id/login_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_sub_relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20.0dip"
        android:layout_marginTop="20.0dip"
        android:text="@string/login_remember"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_remember"
        android:layout_centerHorizontal="true"
        android:background="#ffffffff"
        android:paddingBottom="15.0dip"
        android:paddingLeft="20.0dip"
        android:paddingRight="20.0dip"
        android:paddingTop="15.0dip"
        android:text="@string/login_button"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#ff3aa8f2" />

    <TextView
        android:id="@+id/login_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50.0dip"
        android:text="@string/login_no_account"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#ffffffff" />

</RelativeLayout>